--- a/2023-12.md
+++ b/2023-12.md
@@ -57,9 +57,12 @@ Gyazoを使うのが良かったりするのかな。
 * Franklin.jlでdiary(このページ)を作った
 * 家の片付け(かなり)
 * ふるさと納税(やめた方が良い税制度だと思うが…まあ)
-* [JuliaPackageComparison](https://github.com/JuliaPackageComparisons/JuliaPackageComparisons.github.io)にPRを送った
+* [JuliaPackageComparison](https://github.com/JuliaPackageComparisons/JuliaPackageComparisons.github.io)にPRを2つ送った
+* Juliaによる数理最適化を進めて5章まで終わらせた
 
 今日できなかったこと
 * BasicBSpline.jlのメンテナンス
 * StaticArrays.jlの`rand`周辺のPR修正
+* 散髪
+* 風呂
 * 2023年振り返り
