--- a/2024-01.md
+++ b/2024-01.md
@@ -14,4 +14,29 @@ tags = ["diary"]
 
 ## 2024-01-01
 
+朝から父方の実家へ帰省。
 
+* 昨年の出来事もあり、「あけましておめでとう」は避けた。
+  * まあ目出度いと思うかは私の気分で決めさせて欲しいとは思う。
+  * 「今年もよろしく、よいお年を」とだけ。
+* 従姉妹Aの子供aが人懐っこくなっていて嬉しい。
+  * 雑にボケても笑ってくれるから私が面白くなったのかと勘違いしてしまうが、当人が人懐っこくなっただけ。
+  * 思い上がらなくて良い。
+* 従姉妹Bの子供bが元気そうで嬉しい。
+  * ベランダに出てスリッパを履くだけでずっと爆笑している。
+  * 高い高いなども好きだったので沢山振り回して遊んだ。
+  * 痛みを伴った違和感が腰に発生し反省。準備運動しよう。もう若くない。
+  * 彼(b)は電車やエスカレータに興味津々らしく、私の幼少期に似ているらしい。将来有望。
+
+StaticArrays.jl周辺のメンテナンスを少し進めた。
+夜になってgenkuroki氏の振る舞いについて少し[リプライで指摘](https://x.com/Hyrodium/status/1741840716123582531?s=20)した。
+[Linusですら人の気持ちを勉強できた](https://cpplover.blogspot.com/2018/09/linus.html)のだから、彼もできるだろう。
+他の人間の心の動きは理解できればそう難しくないはずなので頑張ってほしい。
+
+明日の予定
+
+* 2023年振り返り&2024年抱負
+* 精算
+* 2023年にやり残したことの確認
+* 何らかの料理
+* 片付け・掃除
