--- a/2024-01.md
+++ b/2024-01.md
@@ -151,3 +151,25 @@ devmotion氏とは[以前もやりとり](https://github.com/JuliaMath/Irrationa
 
 * キャベツの外側の葉をを剥いて放置していたら丁度良い具合にシナシナになっていたのでロールキャベツに良さそうと思った。
 * そろそろ献血行きたい
+
+# 2024-01-10
+妻が実家から帰宅。
+情緒が安定せず、離婚すると主張されている。
+
+# 2024-01-11
+仕方なく仕事を休むことに。
+
+# 2024-01-12
+出社して同僚に相談。
+
+# 2024-01-13
+生活。
+ロボカップジュニア関西ノードの設営手伝い。
+久々に人々に挨拶できて良かった。
+
+# 2024-01-14
+離婚協議。
+結局離婚しないことになりそう。
+
+# 2024-01-15
+
